# gto

./: LICENSE  README.md
.github/workflows/: test.yml
src/: CMakeLists.txt
src/common/: card.hpp  evaluate.hpp  hand.hpp  rank.hpp  suit.hpp
src/game/: CMakeLists.txt  deck.hpp  dummy.hpp
src/test/: CMakeLists.txt  card.cpp  deck.cpp  dummy.cpp  evalute.cpp  hand.cpp  rank.cpp  suit.cpp
